--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -676,35 +676,38 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            Kompisbyrån creates contact between two new fika friends who have with similar interests. The aim is to speak 
-                            Swedish during a “fika”. One person is new in Sweden, and one person has lived in Sweden for a long time. 
-                            They meet at a café for about 1 hour and speak Swedish. That is what we call a “friend fika” (kompisfika). 
-                            If you think it is fun, you can meet again on your own. If not, it doesn’t matter since the hour still has fulfilled 
-                            its purpose. 
+                            Meet a person with similar interests that you have, at a café for about 1 hour, “fika” and practice Swedish. One person is 
+                            new in Sweden, and one person has lived in Sweden for a long time*. This is what we call a “Friend fika” (Kompisfika).  
                         </p>
                         <p>
-                            We let each person decide how they want to define themselves, as new or established. Being <strong>new in Sweden</strong>, 
+                            You must be able to meet your Fika friend in: Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås or Örebro.
+                        </p>
+                        <p>
+                            How to meet a new Fika friend: 
+                        </p>
+                        <p>
+                            1. <strong>Registration.</strong> Press the “Sign up”-button and fill out the application. The registration is for free. You will receive a 
+                            confirmation email when we have received your application.
+                        </p>
+                        <p>
+                            2. <strong>Match.</strong> We will send you an email with the contact details to your Fika friend.
+                        </p>
+                        <p>
+                            3. <strong>Confirm the meeting.</strong> You contact your Fika friend within 7 days to confirm date, time and place of the meeting.
+                        </p>
+                        <p>
+                            4. <strong>Meeting.</strong> You meet at a café for about 1 hour and practice Swedish. If you want, please take a picture from your meeting and send to us!  
+                        </p>
+                        <p>
+                            5. <strong>What happens after the meeting?</strong>  We will contact you after the meeting to get to know more about your experience. If both of you thought it was fun, you are 
+                            welcome to continue to see each other on your own. You can also sign in and make a new application to meet a new person, or simply be super happy to have 
+                            been someone's Fika friend!
+                        </p>
+                        <p>
+                            *We let each person decide how they want to define themselves, as new or established. Being <strong>new in Sweden</strong>, 
                             you want to speak better Swedish, it does not matter how long or short period of time you have lived in Sweden. As 
-                            <strong>established in Sweden</strong>, you have Swedish as a mother toungue or equivalent, and can tech Swedish in order 
+                            <strong>established in Sweden</strong>, you have Swedish as a mother tongue or equivalent, and can tech Swedish in order 
                             to help someone to improve their Swedish pronunciation, vocabulary and so on.  
-                        </p>
-                        <p>
-                            This is how it works:
-                        </p>
-                        <p>
-                            1. <strong>Registration.</strong> Press the “Sign up”-button (“Bli fikakompis”-knappen) and follow the instructions. The registration is 
-                            for free. You need to be able to meet a person in Göteborg, Jönköping, Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås 
-                            or Örebro.
-                        </p>
-                        <p>
-                            2. <strong>Match.</strong> We will send you an email (often within 1-30 days) when we have found a a good match who has similar interests as you. 
-                            (If you need to complete your application, we will let you know)
-                        </p>
-                        <p>
-                            3. <strong>Decide a date.</strong> You send an email to the person within 7 days, and decide date, time and place. 
-                        </p>
-                        <p>
-                            4. <strong>Meeting.</strong> You meet and speak Swedish at a café or another public place for about 1 hour. 
                         </p>
                     ]]>
                 </target>
@@ -891,7 +894,7 @@ Your friends at Kompisbyrån
                             2. <strong>Match.</strong> We will send you an email with the contact details to your Start friend, or we will call you. 
                         </p>
                         <p>
-                            3. <strong>First contact.</strong> You contact your Start friend within 7 days to confirm date, time and place of the meeting. 
+                            3. <strong>Confirm the meeting.</strong> You contact your Start friend within 7 days to confirm date, time and place of the meeting. 
                         </p>
                         <p>
                             4. <strong>Meeting.</strong> You meet and go for a walk in the neighborhood for about 1 hour. If you want, please take a picture 
