Validation and start email template

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -492,12 +492,12 @@
                 <target>أعد إدخال البريد الالكتروني</target>
             </trans-unit>
 
-            <trans-unit id="user.welcome.message.subject">
-                <source>user.welcome.message.subject</source>
+            <trans-unit id="email.welcome.friend.subject">
+                <source>email.welcome.friend.subject</source>
                 <target>Välkommen till Kompisbyrån - Welcome to Kompisbyrån</target>
             </trans-unit>
-            <trans-unit id="user.welcome.message.body">
-                <source>user.welcome.message.body</source>
+            <trans-unit id="email.welcome.friend.body">
+                <source>email.welcome.friend.body</source>
                 <target><![CDATA[
                    <p>(This message will follow in English)<br /><br /></p>
                     <p>Hej!<br /></p>
@@ -551,12 +551,12 @@
 
                     </p>]]></target>
             </trans-unit>
-            <trans-unit id="user.friend.welcome.message.subject">
-                <source>user.friend.welcome.message.subject</source>
+            <trans-unit id="email.welcome.music.subject">
+                <source>email.welcome.music.subject</source>
                 <target>Tack för att du blivit Musikkompis hos Kompisbyrån!</target>
             </trans-unit>
-            <trans-unit id="user.friend.welcome.message.body">
-                <source>user.friend.welcome.message.body</source>
+            <trans-unit id="email.welcome.music.body">
+                <source>email.welcome.music.body</source>
 
                     <target><![CDATA[
                         <p>(This message will follow in English)<br /><br /></p>
@@ -612,6 +612,17 @@
                             Kompisbyrån
 
                         </p>]]></target>
+            </trans-unit>
+            <trans-unit id="email.welcome.start.subject">
+                <source>email.welcome.start.subject</source>
+                <target>Tack för att du blivit Startkompis hos Kompisbyrån!</target>
+            </trans-unit>
+            <trans-unit id="email.welcome.start.body">
+                <source>email.welcome.start.body</source>
+
+                <target><![CDATA[
+                    ....
+                ]]></target>
             </trans-unit>
             <trans-unit id="match.email.user">
                 <source>match.email.user</source>
